Use JDK 8 for FULL_JDK